--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "dev:start": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.1",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "prisma": "^4.7.1"
+    "jwt-simple": "^0.5.6",
+    "prisma": "^4.7.1",
+    "yup": "^0.32.11"
   }
 }
