--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
     "prisma": "^4.7.1",
+    "socket.io": "^4.5.4",
     "yup": "^0.32.11"
   }
 }
